# Finance

./: .gitignore  README.md  pyproject.toml
data/: financial_metrics_comparison.xlsx
docs/: todo.md
notebooks/: data_fetching.py  msft.ipynb
